deploy/base/openehr-nodes/zio/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zio-portal
  namespace: dh-health
  labels:
    app: zio-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zio-portal
  template:
    metadata:
      labels:
        app: zio-portal
    spec:
      containers:
      - name: zio-portal
        image: registry.prod.dh.unimaas.nl/docker-health/portal:latest
        ports:
        - containerPort: 3000
