deploy/base/openehr-nodes/zio/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zio-portal
spec:
  selector:
    app: zio-portal
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  type: ClusterIP
